# sentimental-onix

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
benchmark/: README.md  benchmark.py  dataset.csv
sentimental_onix/: __main__.py  cli.py  models.py  pipeline.py  util.py
sentimental_onix/data/: __init__.py
sentimental_onix/inference/en/: __init__.py
tests/: test_all.py
